# AlchemyDetect

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  Onnx_tensorRT.md  README.md  main.py  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
alchemydetect/: app.py
alchemydetect/core/: app_logging.py  config_builder.py  dataset_utils.py  exporter.py  inferencer.py  model_catalog.py  runtime_inferencer.py  trainer.py
alchemydetect/gui/: deploy_tab.py  dialogs.py  export_tab.py  image_viewer.py  inference_tab.py  log_viewer.py  loss_plot.py  main_window.py  results_viewer.py  train_tab.py
alchemydetect/workers/: deploy_inference_worker.py  export_worker.py  inference_base.py  inference_worker.py  spawn_process.py  train_worker.py
docs/: TensorRT.md
test_scripts/: retinanet_trt_derisk.py
tests/: conftest.py  test_app_logging.py  test_dataset_utils.py  test_export_worker.py  test_exporter.py  test_gui_widgets.py  test_inference_worker.py  test_model_catalog.py  test_runtime_inferencer.py  test_spawn_process.py  test_train_worker.py
